--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.8.*"
+        "jeroennoten/laravel-adminlte": "^2.0"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
